# ansible-infra

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  ansible.cfg  galaxy.yml  pyproject.toml  requirements.yml
.github/workflows/: ansible-lint.yml
airflow/dags/: test_infra.py
docs/: index.html  script.js  style-neutral.css
docs/sections/: footer.html  home.html  side-nav.html
docs/sections/airflow/: airflow-arch.html  airflow-auth.html  airflow-components.html  airflow-config.html
docs/sections/infrastructure/: infra-deployment.html  infra-rabbitmq.html  infra-roles.html  infra-security.html
group_vars/all/: vars.yml
playbooks/: clean_airflow.yml  clean_cas_mock.yml  clean_infrastructure.yml  clean_postgres.yml  clean_rabbitmq.yml  deploy_airflow.yml  deploy_cas_mock.yml  deploy_postgres.yml  deploy_rabbitmq.yml  test_airflow_scheduler.yml  test_airflow_stack.yml  test_airflow_web.yml  test_postgres.yml  test_rabbitmq.yml
roles/airflow_common/: README.md
roles/airflow_common/defaults/: main.yml
roles/airflow_common/meta/: main.yml
roles/airflow_common/tasks/: clean.yml  main.yml
roles/airflow_common/templates/: airflow.cfg.j2
roles/airflow_scheduler/meta/: main.yml
roles/airflow_scheduler/tasks/: main.yml
roles/airflow_scheduler/templates/: airflow.cfg.j2
roles/airflow_scheduler/tests/: test.yml
roles/airflow_services/: README.md
roles/airflow_services/meta/: main.yml
roles/airflow_services/tasks/: clean.yml  main.yml
roles/cas_mock/: README.md
roles/postgres/: README.md
roles/rabbitmq/: README.md
(+50 files in other folders)
