[project]
name = "ansible-infra"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ansible>=13.4.0",
    "ansible-lint>=26.2.0",
]

[dependency-groups]
dev = [
    "apache-airflow==3.1.8",
    "go-task-bin>=3.48.0",
    "molecule-plugins[podman]>=25.8.12",
    "pre-commit>=4.5.1",
]
